--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
   <h1>Docs</h1>
+  <div id="documents-container"></div>
+  <script>
+    const documents = JSON.parse('<%= documents %>');
+    const container = document.getElementById('documents-container');
+    documents.forEach(doc => {
+      const p = document.createElement('p');
+      const a = document.createElement('a');
+      a.href = `thispage/${doc.name}`;
+      a.textContent = doc.name;
+      p.appendChild(a);
+      container.appendChild(p);
+    });
+  </script>
 </body>
 </html>
